壊せないブロックを設定

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ main: honeb1.blockbreakerkk.BlockBreakerKK
 api-version: 1.16
 permissions:
   bb.use:
-    default: true
+    default: false
 commands:
   bb:
     permission: bb.use
